[gd_scene load_steps=4 format=3 uid="uid://ct05jbh0pb6a3"]

[ext_resource type="Texture2D" uid="uid://bakq6vrfs8dex" path="res://icon.svg" id="1_5nbyo"]
[ext_resource type="Script" path="res://Scene/object/object.gd" id="1_o7nyf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5nqh"]

[node name="object" type="Node2D"]
script = ExtResource("1_o7nyf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5nbyo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(6.00048, 6.00048)
shape = SubResource("RectangleShape2D_b5nqh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
